# rebound-bridge

./: .gitignore  CMakeLists.txt  README.md
cmake/: rebound_bridgeConfig.cmake.in
docs/superpowers/plans/: 2026-05-15-solar-system-long-run-stability.md
examples/: earth_moon_bridge.c  jovian_laplace_bridge.c  solar_system_bridge.c
experiments/gr-probe/: CMakeLists.txt  README.md  probe_gr.c
include/: rebound_bridge.h
src/: rebound_bridge.c
test/: test_bridge.c
validation/solar_system_ias15/: bench_whfast_bridge.c  compare_solar_system_ias15.c  plot_efficiency_sweep.py  plot_solar_system_ias15.py  run.ps1  run_efficiency_sweep.ps1  run_parameter_sweep.ps1  test_plot_solar_system_ias15.py
validation/solar_system_ias15/benchmark_figures/: bridge_vs_ias15_speed.csv  bridge_vs_whfast_speed.csv  whfast_vs_ias15_speed.csv
validation/solar_system_ias15/out_2000yr/: solar_system_ias15_compare.csv
